2014-12-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.22 released.

2014-12-04  Carl Hetherington  <cth@carlh.net>

	* Give a nicer error when writing config fails.

2014-12-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.21 released.

2014-12-04  c.hetherington  <cth@carlh.net>

	* Fix crash on dragging things in the timeline the second
	time it has been opened.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.20 released.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.19 released.

2014-12-03  c.hetherington  <cth@carlh.net>

	* Increase maximum JPEG2000 bandwidth to 1000 Mbit/s
	and allow the default control in config to go that
	high when allowed.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.18 released.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Lilian Lefranc.

	* Version 1.76.17 released.

2014-12-02  Carl Hetherington  <cth@carlh.net>

	* Open a dialog box on adding an image sequence
	so the user can specify the frame rate (#423) and
	request no calculation of digests (#446).

2014-11-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.16 released.

2014-11-25  Carl Hetherington  <cth@carlh.net>

	* Speculative fix for hangs at the end of
	encodes in some cases (with 3D content).

2014-11-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.15 released.

2014-11-24  c.hetherington  <cth@carlh.net>

	* Bump ffmpeg.

2014-11-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.14 released.

2014-11-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.13 released.

2014-11-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.12 released.

2014-11-09  Carl Hetherington  <cth@carlh.net>

	* Remove code which tried to load old DVD-o-matic
	configuration files if they were present.  It is
	not well tested and is unlikely to be of much use
	after all this time anyway.

2014-11-07  Carl Hetherington  <cth@carlh.net>
