@@ -1,3 +1,7 @@
+2014-12-05  c.hetherington  <cth@carlh.net>
+
+	* Fix broken still-image import.
+
 2014-12-04  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.76.22 released.
